added link to personal site

--- a/index.css
+++ b/index.css
@@ -67,3 +67,12 @@ p {
 	margin: 20px;
 	text-align: justify;
 }
+
+footer {
+	color: #D11919;
+	margin: 100px;
+}
+
+footer > a {
+	text-decoration: none;
+}
